<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task2.DownloadAndViewImageMainActivity">

    <ImageView
        android:id="@+id/imgview1"
        android:layout_width="139dp"
        android:layout_height="133dp"
        android:clickable="true"
        android:contentDescription="@string/imgview1"
        app:layout_constraintBottom_toTopOf="@+id/imgview3"
        app:layout_constraintEnd_toStartOf="@+id/imgview2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imgview2"
        android:layout_width="133dp"
        android:layout_height="138dp"
        android:clickable="true"
        android:contentDescription="@string/imgview2"
        app:layout_constraintBottom_toTopOf="@+id/imgview4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgview1"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imgview3"
        android:layout_width="138dp"
        android:layout_height="136dp"
        android:clickable="true"
        android:contentDescription="@string/imgview3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgview4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgview1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imgview4"
        android:layout_width="133dp"
        android:layout_height="135dp"
        android:clickable="true"
        android:contentDescription="@string/imgview4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgview3"
        app:layout_constraintTop_toBottomOf="@+id/imgview2"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:onClick="Download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgview3" />
</androidx.constraintlayout.widget.ConstraintLayout>