<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtmobilename"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/textviewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmobileprice"
        android:layout_width="92dp"
        android:layout_height="31dp"
        android:layout_marginTop="60dp"
        android:text="@string/textviewprice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmobilecompany"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:layout_marginTop="56dp"
        android:text="@string/textviewcompany"
        app:layout_constraintEnd_toStartOf="@+id/txtmobileprice"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/txtmobilename"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>