<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgandtext"
        android:layout_width="168dp"
        android:layout_height="164dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon"
        android:contentDescription="@string/todoimage" />

    <TextView
        android:id="@+id/txtandimage1"
        android:layout_width="155dp"
        android:layout_height="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/textview"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toEndOf="@+id/imgandtext"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtimage2"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:text="@string/textviewandimage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/imgandtext"
        app:layout_constraintTop_toBottomOf="@+id/txtandimage1" />
</androidx.constraintlayout.widget.ConstraintLayout>