<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileHandling.FileHandlingExampleOne">

    <EditText
        android:id="@+id/edtfilehandling"
        android:layout_width="296dp"
        android:layout_height="72dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/enter"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="304dp"
        android:layout_height="101dp"
        android:layout_marginTop="36dp"
        android:text="@string/save_into_file"
        android:textSize="20sp"
        android:onClick="SaveIntoFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtfilehandling" />

    <Button
        android:id="@+id/button9"
        android:layout_width="288dp"
        android:layout_height="98dp"
        android:layout_marginTop="16dp"
        android:text="@string/show_from_file"
        android:textSize="20sp"
        android:onClick="ShowFromFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/txtfilehandling"
        android:layout_width="286dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />
</androidx.constraintlayout.widget.ConstraintLayout>