<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content"



    >

    <androidx.cardview.widget.CardView
        android:id="@+id/mycardview"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="355dp">

            <ImageView
                android:id="@+id/imgcardview"
                android:layout_width="143dp"
                android:layout_height="140dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="108dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:contentDescription="@string/cardView"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/txtcard2"
                android:layout_width="314dp"
                android:layout_height="43dp"
                android:layout_below="@+id/txtcard1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="31dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="26dp"
                android:text="@string/card2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtcard1"
                android:layout_width="321dp"
                android:layout_height="44dp"
                android:layout_below="@+id/imgcardview"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="23dp"
                android:text="@string/card1"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>